--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ a:hover {
   color:white;
   padding: 15px 20px;
   border-radius: 4px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
 
 .btn:hover {
