--- a/style.css
+++ b/style.css
@@ -40,6 +40,15 @@ a:hover {
   text-align: center;
 }
 
+.card-green{
+  background-color: #C2EABD;
+  padding: 30px;
+  box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+  border-radius: 4px;
+  margin: 20px 10px;
+  text-align: center;
+}
+
 .btn {
   background-color:#C2EABD;
   color:white;
